kubernetes-security/Kyverno-policy/sample.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: payments
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx
