kubernetes-security/Kyverno-policy/disallow-latest-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
  - name: require-image-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Image tag 'latest' is not allowed"
      pattern:
        spec:
          containers:
          - image: "!*:latest"
